#503 Update fixed header z-index

--- a/server/http-dashboard/app/components/Layout/components/Header/styles.less
+++ b/server/http-dashboard/app/components/Layout/components/Header/styles.less
@@ -15,7 +15,7 @@
   right: 0;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 100;
 }
 
 .user-layout--header-logo {
